syntax = "proto3";

package e_price;

service EPriceService {
  rpc GetStartBillingDate(GetConfigRequest) returns (BillingStartDateResponse);
  rpc EditStartBillingDate(EditBillingStartDateRequest) returns (BillingStartDateResponse);

  //Config
  rpc GetConfigPrice(GetConfigRequest) returns (ConfigResponse);
  rpc EditConfigPrice(EditConfigRequest) returns (ConfigResponse);

  // One Price Config
  rpc CreateOnePriceConfig(OnePriceRequest) returns (OnePriceResponse);
  rpc GetOnePriceConfig(GetOnePriceConfigRequest) returns (OnePriceResponse);
  rpc EditOnePriceConfig(OnePriceRequest) returns (OnePriceResponse);
  
  // Percent Price Config
  rpc CreatePercentPriceConfig(CreatePercentPriceConfigRequest) returns (PercentPriceResponse);
  rpc GetPercentPriceConfig(GetPercentPriceConfigRequest) returns (PercentPriceResponse);
  rpc EditPercentPriceConfig(EditPercentPriceConfigRequest) returns (PercentPriceResponse);
  rpc DeletePercentPriceConfig(DeletePercentPriceConfigRequest) returns (DeletePriceConfigResponse);
  
  // Stair Price Config
  rpc CreateStairPriceConfig(CreateStairPriceConfigRequest) returns (StairPriceResponse);
  rpc GetStairPriceConfig(GetStairPriceConfigRequest) returns (StairPriceResponse);
  rpc EditStairPriceConfig(EditStairPriceConfigRequest) returns (StairPriceResponse);
  rpc DeleteStairPriceConfig(DeleteStairPriceConfigRequest) returns (DeletePriceConfigResponse);
}

// Common messages
message Status {
  int32 code = 1;
  string message = 2;
  optional string error = 3;
}

// Request messages


message GetConfigRequest {
  string userId = 1;
}

message EditBillingStartDateRequest {
  string userId = 1;
  int32 billingCycleStartDay = 2;
}

message EditConfigRequest {
  string userId = 1;
  string priceType = 2;
}

message GetOnePriceConfigRequest {
  string userId = 1;
}

message OnePriceRequest {
  string userId = 1;
  double price = 2;
}

message GetPercentPriceConfigRequest {
  string userId = 1;
}

message CreatePercentPriceConfigRequest {
  string userId = 1;
  string name = 2;
  double price = 3;
  double percent = 4;
}

message EditPercentPriceConfigRequest {
  string id = 1;
  string userId = 2;
  string name = 3;
  double price = 4;
  double percent = 5;
}

message DeletePercentPriceConfigRequest {
  string userId = 1;
  string id = 2;
}

message GetStairPriceConfigRequest {
  string userId = 1;
}

message CreateStairPriceConfigRequest {
  string userId = 1;
  int32 step = 2;
  double minKwh = 3;
  optional double maxKwh = 4;
  double price = 5;
}

message EditStairPriceConfigRequest {
  string userId = 1;
  string id = 2;
  int32 step = 3;
  double minKwh = 4;
  optional double maxKwh = 5;
  double price = 6;
}

message DeleteStairPriceConfigRequest {
  string userId = 1;
  string id = 2;
}

// Response messages

message Config {
  string priceType = 1;
}

message BillingStartDate {
  int32 billingCycleStartDay = 1;
}

message ConfigResponse {
  Status status = 1;
  Config data = 2;
}

message BillingStartDateResponse {
  Status status = 1;
  optional BillingStartDate data = 2;
}

message OnePriceConfig {
  string id = 1;
  string userId = 2;
  double price = 3;
}

message PercentPriceConfig {
  string id = 1;
  string name = 2;
  double price = 3;
  double percent = 4;
}

message StairPriceConfig {
  string id = 1;
  int32 step = 2;
  double minKwh = 3;
  double maxKwh = 4;
  double price = 5;
}

message OnePriceResponse {
    Status status = 1;
    OnePriceConfig data = 2;
}

message PercentPriceResponse {
    Status status = 1;
    repeated PercentPriceConfig data = 2;
}

message StairPriceResponse {
    Status status = 1;
    repeated StairPriceConfig data = 2;
}

message DeletePriceConfigResponse {
  Status status = 1;
}
